# dogefuzz-results

./: .gitignore  README.md  pyproject.toml
aggregator/: aggregator.py  config.py
aggregator/services/: contract.py  drive.py  input.py  output.py  result.py  result.py.ae7f7c76ec542e5e4c9f22f3efb87214.tmp
aggregator/shared/: constants.py  utils.py
resources/: inputs.json
resources/smartian_b3.inputs/: contracts.csv  inputs.json
results/experiment_2023_05_18/: output.txt
results/experiment_2023_05_22/: output.txt
results/experiment_2023_05_30_10m/: average.txt  cluster-group-a.txt  cluster-group-b.txt  cluster-group-c.txt  vulnerability-delegate.txt  vulnerability-exception-disorder.txt  vulnerability-gasless-send.txt  vulnerability-number-dependency.txt  vulnerability-reentrancy.txt  vulnerability-timestamp-dependency.txt
results/experiment_2023_05_30_1m/: average.txt  cluster-group-a.txt  cluster-group-b.txt  cluster-group-c.txt  delegate.txt  exception-disorder.txt  gasless-send.txt  number-dependency.txt  output.txt  reentrancy.txt  timestamp-dependency.txt  vulnerability-delegate.txt  vulnerability-exception-disorder.txt  vulnerability-gasless-send.txt  vulnerability-number-dependency.txt  vulnerability-reentrancy.txt  vulnerability-timestamp-dependency.txt
results/experiment_2023_05_30_5m/: average.txt  cluster-group-a.txt  cluster-group-b.txt  cluster-group-c.txt  delegate.txt  exception-disorder.txt  gasless-send.txt  number-dependency.txt  output.txt  reentrancy.txt  timestamp-dependency.txt  vulnerability-delegate.txt  (+5 more)
(+1 files in other folders)
