[tool.poetry]
name = "aggregator"
version = "0.1.0"
description = ""
authors = ["Ismael Medeiros <ismaelcmedeiros@gmail.com>"]
readme = "README.md"
packages = [{include = "aggregator"}]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.5.0"
gdown = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aggregator = "aggregator:main"
